<resources>
    <string name="app_name">BeVi</string>

    <!-- TODO: Remove or change this placeholder text -->
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="user_name">User name</string>
  <string name="dateOfBirth">Date of birth</string>
  <string name="phone">Phone order</string>
  <string name="address">Address</string>
  <string name="note">Note</string>
  <string name="ok">Ok</string>
  <string name="checkin">Checkin</string>
  <string name="booking">Booking</string>
  <string name="department">Department: </string>
  <string name="yourNumber">Your Number</string>
  <string name="title_toobar">BEVI</string>
    <string name="date">Date</string>
    <string name="hours">Hours</string>
</resources>
