<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.linht.bevi.userInfor.UserInforFragment"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
  <ImageView
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:src="@drawable/heart"
      android:layout_gravity="center"
      android:layout_marginBottom="20dp"
      />

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginTop="12dp"
      android:textColorHint="@color/hint"
      android:theme="@style/AppTheme"
      >

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:inputType="textNoSuggestions"
        />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/layoutDateOfBirth"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginTop="12dp"
      android:textColorHint="@color/hint"
      android:theme="@style/AppTheme"
      >

    <EditText
        android:id="@+id/dateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dateOfBirth"
        android:inputType="datetime"
        />

  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:id="@+id/phoneLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginTop="12dp"
      android:textColorHint="@color/hint"
      android:theme="@style/AppTheme"
      >

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        />

  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:id="@+id/layoutAddress"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginTop="12dp"
      android:textColorHint="@color/hint"
      android:theme="@style/AppTheme"
      >

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:inputType="textNoSuggestions"
        />

  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:id="@+id/layoutNote"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginTop="12dp"
      android:textColorHint="@color/hint"
      android:theme="@style/AppTheme"
      >

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note"
        android:inputType="textNoSuggestions"
        />

  </android.support.design.widget.TextInputLayout>

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/ok"
      android:textColor="@color/white"
      android:layout_margin="10dp"
      android:background="@drawable/custom_button"
      android:id="@+id/userOkBtn"
      />

</LinearLayout>

</ScrollView>
