<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bookind_calender"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.example.linht.bevi.methods.booking.BookindCalender">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="Booking Infor"
        android:gravity="center"
        android:textSize="16pt"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:weightSum="10"
            android:orientation="horizontal"
            android:id="@+id/layoutlinear"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/hint"
                android:theme="@style/AppTheme"
                android:layout_weight="6">

                <EditText
                    android:id="@+id/datebooking"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/date"
                    android:inputType="textNoSuggestions"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/hint"
                android:theme="@style/AppTheme"
                android:layout_weight="4">

                <EditText
                    android:id="@+id/hourbooking"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/hours"
                    android:inputType="textNoSuggestions"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/hint"
            android:theme="@style/AppTheme">

            <EditText
                android:id="@+id/notebooking"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/note"
                android:inputType="textNoSuggestions"
                />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
</LinearLayout>
